# investment-analyzer

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  docker-compose.yml  setup_project.sh
backend/: .env.example  Dockerfile  init_db.py  pyproject.toml
backend/_info/: NOTEBOOK_GUIDE.md  investment_portfolio_complete_walkthrough.ipynb
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  9fa4a978ee74_make_asset_id_nullable_for_deposit_.py  a1b2c3d4e5f6_change_daily_data_datetime_to_date.py  b2c3d4e5f678_add_missing_fk_indexes_remove_redundant.py  c3d4e5f6g789_add_composite_indexes_for_performance.py  daa490ca3288_initial_schema_baseline.py  e8193cc7257e_phase_3_add_exchange_rates_sync_status_.py
backend/app/: config.py  database.py  demo_walkthrough.py  dependencies.py  main.py  models.py
backend/app/middleware/: __init__.py  correlation.py  rate_limit.py
backend/app/routers/: __init__.py  analytics.py  assets.py  auth.py  portfolio_settings.py  portfolios.py  sync.py  transactions.py  upload.py  users.py  valuation.py
backend/app/schema/: __init__.py  assets.py  portfolios.py  transactions.py
backend/app/schemas/: __init__.py  analytics.py  assets.py  auth.py  errors.py  exchange_rates.py  market_data.py  pagination.py  portfolio_settings.py  portfolios.py  transactions.py  upload.py  user_profile.py  user_settings.py  validators.py  valuation.py
backend/app/services/: __init__.py  asset_resolution.py  (+8 more)
backend/scripts/: migrate_proxy_mappings.py  seed_sample_data.py
backend/tests/: conftest.py  test_correlation_id.py
(+133 files in other folders)
